--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,6 +28,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PJ'
 - !lcsh 'Arabic literature -- History and criticism'
+- GITenberg
 tableOfContents: Preface -- Introduction -- Saba and Ḥimyar -- The history and legends
   of the pagan Arabs  -- Pre-islamic poetry, manners, and religion -- The Prophet
   and the Koran -- The orthodox caliphate and the Umayyad Dynasty -- The caliphs of
